--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -44,7 +44,6 @@ android {
                     'proguard-rules.pro'
         }
         debug {
-            // Disable fabric build ID generation for debug builds
             ext.enableCrashlytics = false
         }
     }
@@ -63,6 +62,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:percent:27.0.2'
+    implementation 'com.android.support:customtabs:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     // Push notifications
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
@@ -79,9 +79,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
-    // Facebook login
+    // Facebook
     implementation 'com.facebook.android:facebook-android-sdk:4.24.0'
-    // Facebook ads
     implementation ('com.facebook.android:audience-network-sdk:4.24.0') {
         exclude group: 'com.google.android.gms'
     }
@@ -92,7 +91,7 @@ dependencies {
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
     // Custom fonts
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
-    // A small library containing a wrapper/helper for the Shared Preferences of android
+    // Shared preferences wrapper
     implementation 'com.pixplicity.easyprefs:library:1.8.1@aar'
     // Parses HTML store items or stats for sharing
     implementation 'org.jsoup:jsoup:1.11.2'
@@ -102,7 +101,7 @@ dependencies {
     implementation "com.github.miguelbcr:RxPaparazzo:0.6.0-2.x"
     // VideoView with controls
     implementation 'com.linsea:universalvideoview:1.1.0@aar'
-    // Image loader library
+    // Image loader
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     // Kotlin
@@ -110,14 +109,12 @@ dependencies {
     implementation "org.jetbrains.anko:anko:0.10.4"
     // Architecture components
     implementation "android.arch.lifecycle:extensions:1.1.0"
-
+    // Transparent status bar
     implementation 'com.jaeger.statusbarutil:library:1.4.0'
+    // Crash reporting
     implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
-
-
-    // *** Not included in release, temporarily disabled
     // Video chat
     implementation 'com.twilio:video-android:1.3.0'
     // Checkout (Android In-App Billing Library) used for billing
