--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.anko:anko:0.10.4"
     // Architecture components
     implementation "android.arch.lifecycle:extensions:1.1.0"
