--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     // Push notifications
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.firebase:firebase-crash:11.8.0'
     // Youtube
     implementation fileTree(include: ['YouTubeAndroidPlayerApi.jar'], dir: 'libs')
     implementation 'com.google.http-client:google-http-client-android:1.20.0'
