--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -63,9 +63,11 @@ dependencies {
     implementation 'com.android.support:percent:27.0.2'
     implementation 'com.android.support:customtabs:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
     // Push notifications
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
-    implementation 'com.google.firebase:firebase-crash:11.8.0'
+    implementation project(':e-goi-push-notifications')
+
     // Youtube
     implementation fileTree(include: ['YouTubeAndroidPlayerApi.jar'], dir: 'libs')
     implementation 'com.google.http-client:google-http-client-android:1.20.0'
@@ -73,63 +75,85 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-gson:1.20.0'
     implementation 'com.google.apis:google-api-services-youtube:v3-rev181-1.22.0'
     implementation files('libs/YoutubeAndroidPlayerApi.jar')
+
     // Gamesparks backend
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
+
     // Json parsing
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0'
+
     // Facebook
     implementation 'com.facebook.android:facebook-android-sdk:4.24.0'
     implementation('com.facebook.android:audience-network-sdk:4.24.0') {
         exclude group: 'com.google.android.gms'
     }
+
     // Image uploading
     implementation 'com.amazonaws:aws-android-sdk-core:2.4.2'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.4.2'
+
     // Circle Progress UI element used for Profile icon
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
+
     // Custom fonts
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+
     // Shared preferences wrapper
     implementation 'com.pixplicity.easyprefs:library:1.8.1@aar'
+
     // Parses HTML store items or stats for sharing
     implementation 'org.jsoup:jsoup:1.11.2'
+
     // Reactive extensions
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation "com.github.miguelbcr:RxPaparazzo:0.6.0-2.x"
+    implementation 'com.github.miguelbcr:RxPaparazzo:0.6.0-2.x'
+
     // VideoView with controls
     implementation 'com.linsea:universalvideoview:1.1.0@aar'
+
     // Image loader
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-    implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.6.1'
+
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "org.jetbrains.anko:anko:0.10.4"
+    implementation 'org.jetbrains.anko:anko:0.10.4'
+
     // Architecture components
-    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
+
     // Transparent status bar
     implementation 'com.jaeger.statusbarutil:library:1.4.0'
+
     // Video chat
     implementation 'com.twilio:video-android:1.3.0'
+
     // Checkout (Android In-App Billing Library) used for billing
     implementation 'org.solovyev.android:checkout:1.0.0'
+
     // List animations
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
 
     // *** Replaceable with Kotlin or RxJava, deprecated libraries
+
     // Binds Android views and callbacks to fields and methods
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     // Permission handling library used around the project for easier handling of permissions
     implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
+
     // Event bus
     implementation 'org.greenrobot:eventbus:3.0.0'
+
     // Prohibits certain actions when offline
     implementation 'com.keiferstone:nonet:2.0.0'
+
     // Picker used for translation popup to select language
     implementation 'com.shawnlin:number-picker:2.4.4'
 }
