--- a/SportsSideKick/app/src/sportsidekick/AndroidManifest.xml
+++ b/SportsSideKick/app/src/sportsidekick/AndroidManifest.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        tools:replace="android:theme"
         android:name="base.app.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme">
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -21,24 +21,24 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
 
         <!-- ** ** Notifications ** ** -->
-        <service
-            android:name="base.app.data.notifications.SskFirebaseMessagingService">
+        <service android:name="base.app.data.notifications.SskFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <service
-            android:name="base.app.data.notifications.FirebaseInstanceIDService">
+        <service android:name="base.app.data.notifications.FirebaseInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
@@ -67,6 +67,27 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="37603fd544c2349d3453ebc172ed3673360bae53" />
+
+        <!--Push notifications from E-goi-->
+
+        <receiver
+            android:name="base.app.util.commons.egoi_push_notifications.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.egoi.pushtemplateproject.gcm" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="base.app.util.commons.egoi_push_notifications.GcmIntentService" />
+
+        <activity android:name="base.app.util.commons.egoi_push_notifications.GCMDeviceRegister"/>
+
+        <activity
+            android:name="base.app.util.commons.egoi_push_notifications.EGoiWebView"
+            android:label="EGoi WebView"/>
 
     </application>
 
