login prompt section

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -29,7 +29,7 @@ android {
         ignoreWarnings true
         quiet true
         lintOptions {
-            disable 'ContentDescription', 'KeyboardInaccessibleWidget'
+            disable 'ContentDescription', 'KeyboardInaccessibleWidget', 'MissingPrefix'
         }
     }
     buildTypes {
