enable kotlin build cache

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -48,6 +48,9 @@ kotlin {
     experimental {
         coroutines "enable"
     }
+    kapt {
+        useBuildCache = true
+    }
 }
 
 dependencies {
