fix proguard json parsing problem

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -41,6 +41,13 @@ android {
                     'proguard-android.txt'),
                     'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android.txt'),
+                    'proguard-rules.pro'
+        }
     }
 }
 
