exclude build files from search

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -60,6 +60,7 @@ kotlin {
 idea.module {
     // Excluding build files from file search
     excludeDirs += file('build/')
+    excludeDirs += file('app/build/')
 }
 
 dependencies {
