fix jackson proguard crash

--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -32,7 +32,9 @@ android {
         ignoreWarnings true
         quiet true
         lintOptions {
-            disable 'ContentDescription', 'KeyboardInaccessibleWidget', 'MissingPrefix'
+            disable 'ContentDescription',
+                    'KeyboardInaccessibleWidget',
+                    'MissingPrefix'
         }
     }
     buildTypes {
