--- a/SportsSideKick/app/dependencies.gradle
+++ b/SportsSideKick/app/dependencies.gradle
@@ -6,7 +6,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:percent:27.0.2'
     implementation 'com.android.support:customtabs:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
 
     // Notifications
     implementation project(':e-goi-push-notifications')
