--- a/SportsSideKick/app/dependencies.gradle
+++ b/SportsSideKick/app/dependencies.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
 
     // Analytics
-    compile 'com.google.android.gms:play-services-analytics:10.2.4'
+    implementation 'com.google.android.gms:play-services-analytics:11.8.0'
 
 
     // *** Dev tools *** \\
