--- a/SportsSideKick/app/dependencies.gradle
+++ b/SportsSideKick/app/dependencies.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.github.miguelbcr:RxPaparazzo:0.6.0-2.x'
+    implementation 'nl.littlerobots.rxlint:rxlint:1.6'
 
     // VideoView with controls
     implementation 'com.linsea:universalvideoview:1.1.0@aar'
