import amazon analytics library

--- a/SportsSideKick/app/dependencies.gradle
+++ b/SportsSideKick/app/dependencies.gradle
@@ -83,6 +83,10 @@ dependencies {
     // List animations
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
 
+    // Analytics
+    implementation 'com.amazonaws:aws-android-sdk-mobileanalytics:2.4.2'
+    implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.4.2'
+
 
     // *** Dev tools *** \\
 
